UI till image uploading

--- a/PicMath/imgcalculator/app1/templates/index.html
+++ b/PicMath/imgcalculator/app1/templates/index.html
@@ -96,7 +96,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="/" class="active">Home</a></a></li>
-							<li><a href="mainpage.html">Main</a></li>
+							<li><a href="/mainpage">Main</a></li>
 							
 						</ul>
 
@@ -162,7 +162,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<i class="fa fa-book" aria-hidden="true"></i>
 							</div>
 							<div class="services-icon-info">
-								<h5>UPLOAD IMAGE HERE</h5>
+								<h5>UPLOAD IMAGE </h5>
 								<p>You can upload image of mathematical equations that contains basic arithmetic operations of single digit numbers with one operator!!!</p>
 							</div>
 						</div>
